--- a/README
+++ b/README
@@ -1,4 +1,8 @@
 Ibooks Author test for the next widget events:
 
-widget.pauseAudioVisual
-widget.didEnterWidgetMode
+*widget.pauseAudioVisual
+*widget.didEnterWidgetMode
+
+Miguel Sánchez Molina
+[widgetshtml.com](widgetshtml.com)
+
